# AAM

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
aam/: main.py
aam/config/: config.py
aam/model/: user.py
aam/routes/: auth.py  iam.py  ping.py  user.py
aam/service/: auth.py  iam.py  sentinel.py
scripts/: deploy.sh  init.sh  run.sh
web/: .gitignore  index.html  netlify.toml  package.json
web/src/: App.tsx  main.tsx
web/src/components/: Header.tsx
web/src/consts/: config.tsx
web/src/lib/: auth.ts
web/src/pages/: LaunchConsolePage.tsx
web/src/pages/auth/: LoginPage.tsx
