[project]
name = "aam"
version = "0.1.0"
description = "AWS Access Manager, powered by Sentinel."
authors = [
    {name = "Bharat Kathi",email = "bharat1031@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
black = "^24.8.0"
pre-commit = "^4.3.0"

[project.scripts]
aam = "aam.main:main"

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [".ruff_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # line too long

[tool.black]
target-version = ['py312']
line-length = 88

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
