[project]
name = "aam"
version = "0.1.0"
description = "AWS Access Manager, powered by Sentinel."
authors = [
    {name = "Bharat Kathi", email = "bkathi@ucsb.edu"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "requests (>=2.31.0,<3.0.0)",
    "pydantic (>=2.5.0,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "boto3 (>=1.40.18,<2.0.0)"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
black = "^24.8.0"
pre-commit = "^4.3.0"

[project.scripts]
aam = "aam.main:main"

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [".ruff_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # line too long

[tool.black]
target-version = ['py312']
line-length = 88

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
